# codex-switcher

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  codex_switcher.py  index.html  install.sh  package-lock.json  package.json  pyproject.toml  todolist.md  vite.config.ts
.github/workflows/: linux-build.yml
docs/superpowers/plans/: 2026-04-28-code-switcher-app.md  2026-04-28-tauri-app.md  2026-04-29-linux-packaging.md
docs/superpowers/specs/: 2026-04-28-tauri-app-design.md
packaging/linux/: Dockerfile  build-linux.sh
public/: provider.yaml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  profiles.rs
tests/: test_profile_overwrite.py
