[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-switcher"
version = "0.1.0"
description = "Switch between local AI coding tool accounts"
requires-python = ">=3.10"

[project.scripts]
csw = "codex_switcher:main"

[tool.setuptools]
py-modules = ["codex_switcher"]
