[package]
name = "codex-switcher-app"
version = "0.1.0"
description = "Desktop account manager for Codex Switcher"
authors = ["Autumn0716"]
edition = "2021"
build = "build.rs"

[lib]
name = "codex_switcher_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
