[package]
name = "code-switcher"
version = "0.1.0"
description = "Desktop account manager for code-switcher"
authors = ["Autumn0716"]
edition = "2021"
build = "build.rs"

[lib]
name = "code_switcher_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
